--- a/Client/package.json
+++ b/Client/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.3.0",
     "@mui/material": "^5.3.0",
     "@mui/styled-engine-sc": "^5.3.0",
+    "axios": "^0.25.0",
     "d3": "^7.3.0",
     "next": "12.0.8",
     "react": "17.0.2",
