--- a/Client/package.json
+++ b/Client/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "^11.6.0",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.3.0",
+    "@mui/lab": "*",
     "@mui/material": "^5.3.0",
     "@mui/styled-engine-sc": "^5.3.0",
     "axios": "^0.25.0",
