--- a/Client/package.json
+++ b/Client/package.json
@@ -15,6 +15,8 @@
     "@mui/lab": "*",
     "@mui/material": "^5.3.0",
     "@mui/styled-engine-sc": "^5.3.0",
+    "@mui/x-data-grid": "^5.5.1",
+    "@mui/x-data-grid-generator": "^5.5.1",
     "axios": "^0.25.0",
     "d3": "^7.3.0",
     "next": "12.0.8",
