--- a/Client/package.json
+++ b/Client/package.json
@@ -19,8 +19,10 @@
     "@mui/x-data-grid-generator": "^5.5.1",
     "axios": "^0.25.0",
     "d3": "^7.3.0",
+    "d3-transition": "^3.0.1",
     "next": "12.0.8",
     "react": "17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "17.0.2",
     "react-useinterval": "^1.0.2",
     "styled-components": "^5.3.3",
